--- a/src/core/SmallerContent.scss
+++ b/src/core/SmallerContent.scss
@@ -2,7 +2,7 @@
 
 @media (min-width: .2 * 1024px) {
   .smaller-content-holder  {
-    width: calc(100% - (.4 * 368px));
+    width: calc(100% - (.4 * 360px));
   }
 }
 
